fixed gap at top of menu

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -14,7 +14,7 @@
 }
 
 .navMenu.active {
-    top: 75px;
+    top: 70px;
 }
 
 ul {
